<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/dark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/montserrat_light"
        android:gravity="center"
        android:text="@string/stop_workout"
        android:textColor="@color/dark"
        android:textSize="16sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/dark"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/dark"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@color/white"
            android:layout_gravity="center"
            android:text="@string/make_choice" />

    </FrameLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnYes"
        android:layout_weight="1"
        android:background="@drawable/btn_bg"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/yes"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNo"
        android:layout_weight="1"
        android:background="@drawable/btn_bg"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/nop"/>

</LinearLayout>

</LinearLayout>