<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BMIActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_bmi_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="60dp"
            android:src="@drawable/pngegg" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/llUnitsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_bmi_activity"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/calculate_bmi"
            android:textColor="@color/dark"
            android:textSize="25sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/rgUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbMetricUnits"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/units_tab_selector"
                android:button="@null"
                android:checked="true"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/metrics_units"
                android:textColor="@drawable/units_tab_text_color_selector"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbUsUnits"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/units_tab_selector"
                android:button="@null"
                android:checked="false"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/us_units"
                android:textColor="@drawable/units_tab_text_color_selector"
                android:textStyle="bold" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricUnitWeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricUnitWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMetricUnitHeight"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etMetricUnitHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llDisplayBMIResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tvYourBMI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/your_bmi"
                android:textColor="@color/dark"
                android:textSize="16sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvBMIValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:textColor="@color/dark"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="15.00" />

            <TextView
                android:id="@+id/tvBMIType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:textColor="@color/dark"
                android:textSize="18sp"
                tools:text="Normal" />

            <TextView
                android:id="@+id/tvBMIDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:textColor="@color/dark"
                android:textSize="18sp"
                tools:text="Normal" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCalculateUnits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="35dp"
            android:background="@drawable/btn_bg"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/calculate"
            android:textColor="@color/dark"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>